refactor: refactoring 1
