# handler/uploadKey.go
@@ -5,32 +5,30 @@ import (
 )
 
 // @BasePath /
-
-// @Summary upload key
-
-// @Description uploads a public key
-// @Tags Server operations
+// @Summary Upload a public key
+// @Description Uploads a public key
+// @Tags Encryption
 // @Accept multipart/form-data
 // @Produce json
 // @Param file formData file true "File"
 // @Success 200 {string} string "key_uploaded"
 // @Failure 400 {string} string "bad_request"
-// @Failure 404 {string} string "not_found"
 // @Failure 500 {string} string "internal_server_error"
-// @Router /upload_key [post]
+// @Router /encryption/upload_key [post]
 func UploadKey(ctx *gin.Context) {
 	ctx.Request.ParseMultipartForm(10 << 20)
 
 	file, err := ctx.FormFile("arquivo")
 	if err != nil {
 		response(ctx, 400, "bad_request", err)
+		return
 	}
 
-	// Salva a chave no servidor
 	err = ctx.SaveUploadedFile(file, "./key/"+file.Filename)
 	if err != nil {
 		response(ctx, 500, "internal_server_error", err)
+		return
 	}
 
-	response(ctx, 200, "keys_generated", err)
+	response(ctx, 200, "key_uploaded", err)
 }
